@@ -1,5 +1,7 @@
 = HEAD
 
+* Recognize Roda :root option in render and assets plugins (jeremyevans)
+
 * Make :layout=>false option in render plugin override previous layout template (jeremyevans)
 
 * Make add_file in the mailer plugin add the files after the email body instead of before (jeremyevans)
